# NetApplicationManager

./: CMakeLists.txt  app.manifest  main.cpp  resource.qrc
